refactor: login route
